change location of functions to controllers in the backend, changed alerts

--- a/src/styles/web/login.scss
+++ b/src/styles/web/login.scss
@@ -40,6 +40,12 @@
   form{
     display: block;
 
+  .error-message {
+    color: red;
+    height: 15px;
+    font-family: $font2;
+  }
+
 .signin-input{
 
   display: flex;
