--- a/src/styles/web/signUp.scss
+++ b/src/styles/web/signUp.scss
@@ -41,6 +41,13 @@
   form{
     display: block;
 
+    .signup-error-message {
+      color: red;
+      height: 15px;
+      font-family: $font2;
+    }
+
+
 .signin-input{
 
   display: flex;
