--- a/src/styles/web/welcome.scss
+++ b/src/styles/web/welcome.scss
@@ -285,6 +285,7 @@
           font-family: $font1;
           font-size: 40px;
           color: $white;
+          text-align: center;
         }
 
         .title-bar {
@@ -292,6 +293,7 @@
             height: 4px;
             width: 45%;
             margin: 15px;
+
         }
 
       }
