--- a/src/styles/web/help.scss
+++ b/src/styles/web/help.scss
@@ -15,9 +15,9 @@
     align-items: center;
     width: 100%;
     height: 15vh;
-    background: $mgrey;
-    border-bottom: 10px solid $teal;
-    opacity: 0.95;
+    background: $dblue;
+    border-bottom: 6px solid $teal;
+    // opacity: 0.95;
 
     h1{
       font-size: 45px;
