create functionality for toggle hamburger menu

--- a/src/styles/web/header.scss
+++ b/src/styles/web/header.scss
@@ -54,7 +54,19 @@
 
     }
 }
+.hamburger-menu {
+
+    ul {
+
+        li:hover {
+          cursor: pointer;
+        }
+    }
+}
 
 .icon-bars{
   display: none;
+}
+.icon-bars:hover {
+  cursor: pointer;
 }
