fixed modal zindex

--- a/src/styles/mobile/userHomeMobile.scss
+++ b/src/styles/mobile/userHomeMobile.scss
@@ -3,5 +3,145 @@
 @media (max-width: 800px) {
 
 
+  .user-home-main{
+
+
+  }
+
+  .main-side-menu{
+
+
+  }
+  .side-menu-top{
+
+
+
+  img{
+
+  }
+  }
+  .side-menu-options{
+
+
+
+    ul{
+
+      li{
+
+
+        .truck-user-list{
+
+
+          div{
+
+
+          }
+          p{
+
+
+          }
+        }
+          .icon-right-open{
+
+
+          }
+
+          .side-menu-end{
+
+
+
+            .car-status{
+
+
+              #car-active{
+
+              }
+              #car-idle{
+
+              }
+
+              #car-off{
+
+              }
+
+            }
+
+          }
+
+
+      }
+      li:hover{
+
+      }
+    }
+  }
+
+  #foot{
+
+
+
+
+    .userhome-footer{
+
+
+
+      p{
+
+      }
+    }
+    .userhome-footer:hover{
+
+    }
+  }
+
+
+
+
+  .user-right-section{
+
+
+    ng-map{
+
+    }
+
+
+
+  .user-top-menu{
+
+
+
+    .dash{
+
+    }
+    .user-info-cont{
+
+
+      .username{
+
+
+        p{
+
+        }
+
+      }
+      .user-icon{
+
+
+
+      .icon-circle-thin{
+
+
+        .icon-user{
+          
+
+        }
+      }
+
+        }
+      }
+    }
+  }
+
+
 
 }
