--- a/src/styles/web/modal.scss
+++ b/src/styles/web/modal.scss
@@ -22,6 +22,9 @@
   height: 100vh;
   position: fixed;
 
+  // opacity: 0.99;
+  z-index: 99;
+
   display: flex;
   justify-content: center;
   align-items: center;
