--- a/src/styles/web/vehicle-location.scss
+++ b/src/styles/web/vehicle-location.scss
@@ -22,12 +22,13 @@
         background: $mgrey;
         cursor: default;
         color: $white;
-        height: 39vh;
+        height: 25%;
 
         .input-group{
           display: flex;
           flex-direction: row;
           align-items: center;
+          justify-content: center;
 
 
         #calender{
@@ -36,13 +37,33 @@
         .icon-calender {
             font-size: 25px;
             color: $white;
-            
+
         }
+      }
+      #timeFilterSection {
+        background: $mgrey;
+        height: 22vh;
+        margin-top: -3px;
+        width: 110%;
+        margin-left: -10px;
+        padding-left: 5px;
+        padding-right: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
       }
         .time-from-to{
           display: flex;
           flex-direction: column;
           align-items: center;
+
+          b {
+            display: flex;
+            flex-direction: row;
+            width: 80%;
+            align-items: center;
+            justify-content: space-between;
+          }
         }
         input {
             border: none;
