--- a/src/styles/web/vehicle-location.scss
+++ b/src/styles/web/vehicle-location.scss
@@ -22,7 +22,7 @@
         background: $mgrey;
         cursor: default;
         color: $white;
-        height: 39vh;
+        height: 245px;
 
         .input-group{
           display: flex;
@@ -36,7 +36,7 @@
         .icon-calender {
             font-size: 25px;
             color: $white;
-            
+
         }
       }
         .time-from-to{
