--- a/src/styles/web/vehicle-info.scss
+++ b/src/styles/web/vehicle-info.scss
@@ -82,11 +82,12 @@
       justify-content: space-around;
       width: 100%;
       cursor: pointer;
-      // max-width: 530px;
-      min-width: 530px;
 
 
 
+      .tab{
+        width: 50%;
+      }
 
       div.active{
         background: $orange;
@@ -97,12 +98,7 @@
 
         }
 
-        .location-tab {
 
-        }
-        .behavior-tab {
-
-        }
     }
 
     // div {
