fixed vehicle locations mobile view

--- a/src/styles/mobile/vehicle-location-mobile.scss
+++ b/src/styles/mobile/vehicle-location-mobile.scss
@@ -73,11 +73,14 @@
       }
       .vehicle-locations {
 
+          width: 50%;
+
           ul {
 
 
               li {
 
+                font-size: 12px;
 
               }
               li:hover {
