--- a/src/styles/web/welcome.scss
+++ b/src/styles/web/welcome.scss
@@ -1,11 +1,37 @@
 @import 'main';
 
+.loading {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  position: absolute;
+  background-color: #262626;
+  justify-content: center;
+  align-items: center;
 
+    .img {
+      height: 70vh;
+      width: 70vh;
+      display: flex;
+      justify-content: center;
+
+      color: white;
+      font-family: sans-serif;
+      font-size: 6vh;
+      background-image: url('http://i.kinja-img.com/gawker-media/image/upload/krizzghfqegk0fv0g3ey.gif');
+      background-size: contain;
+      background-repeat: no-repeat;
+
+      span {
+        margin-top: 40vh;
+      }
+    }
+}
 .welcome-background {
     height: 100vh;
     width: 100vw;
     background-image: url("./birdShit-min.jpeg");
-
+    position: relative;
     background-size: cover;
     background-repeat: no-repeat;
 }
