--- a/src/styles/web/user-home.scss
+++ b/src/styles/web/user-home.scss
@@ -1,5 +1,33 @@
 @import "main";
 
+.loadingUser {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  position: absolute;
+  background-color: #262626;
+  justify-content: center;
+  align-items: center;
+
+    .img {
+      height: 70vh;
+      width: 70vh;
+      display: flex;
+      justify-content: center;
+
+      color: white;
+      font-family: sans-serif;
+      font-size: 6vh;
+      background-image: url('https://cdn2.scratch.mit.edu/get_image/user/15847905_90x90.png?v=1466382536.57');
+      background-size: contain;
+      background-repeat: no-repeat;
+
+      span {
+        
+      }
+    }
+}
+
 .user-home-main{
 
   display: flex;
