--- a/src/styles/web/welcome.scss
+++ b/src/styles/web/welcome.scss
@@ -8,6 +8,7 @@
   background-color: #262626;
   justify-content: center;
   align-items: center;
+  z-index: 100;
 
     .img {
       height: 70vh;
@@ -18,7 +19,7 @@
       color: white;
       font-family: sans-serif;
       font-size: 6vh;
-      background-image: url('http://i.kinja-img.com/gawker-media/image/upload/krizzghfqegk0fv0g3ey.gif');
+      background-image: url('https://cdn2.scratch.mit.edu/get_image/user/15847905_90x90.png?v=1466382536.57');
       background-size: contain;
       background-repeat: no-repeat;
 
